tests/negative/typecheck/select_non.orng
// select_non.orng:5:32: error: the type `Int` is not selectable
// fn main() -> Int {let x = 4; x.g}
//                               ^
// 
fn main() -> Int {let x = 4; x.g}